# focusapp-v1

./: package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: app.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: backend.rs  main.rs
src/components/: Dashboard.tsx  Sidebar.tsx  TrackingStatus.tsx  UsagePattern.tsx
